[gd_scene load_steps=5 format=3 uid="uid://lc2m0w4x6yaa"]

[ext_resource type="ArrayMesh" uid="uid://dar8yrqwxk0sv" path="res://assets/shop.obj" id="1_lx5au"]
[ext_resource type="Script" uid="uid://dm7krx8lf2tif" path="res://scenes/shop.gd" id="1_xfvoa"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_xfvoa"]
data = PackedVector3Array(-39.6577, 30.7342, -1, -37.6583, 30.7342, -1, -39.6577, 30.7342, 1, -39.6577, 30.7342, 1, -37.6583, 30.7342, -1, -37.6583, 30.7342, 1, -37.6583, 30.7342, 1, -37.6583, -1, 1, -39.6577, 30.7342, 1, -39.6577, 30.7342, 1, -37.6583, -1, 1, -39.6577, -1, 1, -39.6577, 30.7342, 1, -39.6577, -1, 1, -39.6577, 30.7342, -1, -39.6577, 30.7342, -1, -39.6577, -1, 1, -39.6577, -1, -1, -37.6583, -1, -1, -39.6577, -1, -1, -37.6583, -1, 1, -37.6583, -1, 1, -39.6577, -1, -1, -39.6577, -1, 1, -37.6583, 30.7342, -1, -37.6583, -1, -1, -37.6583, 30.7342, 1, -37.6583, 30.7342, 1, -37.6583, -1, -1, -37.6583, -1, 1, -39.6577, 30.7342, -1, -39.6577, -1, -1, -37.6583, 30.7342, -1, -37.6583, 30.7342, -1, -39.6577, -1, -1, -37.6583, -1, -1, 37.6571, 30.7342, 1, 37.6571, 30.7342, -1, 39.6577, 30.7342, 1, 39.6577, 30.7342, 1, 37.6571, 30.7342, -1, 39.6577, 30.7342, -1, 39.6577, -1, 1, 37.6571, -1, 1, 39.6577, 30.7342, 1, 39.6577, 30.7342, 1, 37.6571, -1, 1, 37.6571, 30.7342, 1, 39.6577, -1, -1, 39.6577, -1, 1, 39.6577, 30.7342, -1, 39.6577, 30.7342, -1, 39.6577, -1, 1, 39.6577, 30.7342, 1, 39.6577, -1, 1, 39.6577, -1, -1, 37.6571, -1, 1, 37.6571, -1, 1, 39.6577, -1, -1, 37.6571, -1, -1, 37.6571, -1, 1, 37.6571, -1, -1, 37.6571, 30.7342, 1, 37.6571, 30.7342, 1, 37.6571, -1, -1, 37.6571, 30.7342, -1, 37.6571, -1, -1, 39.6577, -1, -1, 37.6571, 30.7342, -1, 37.6571, 30.7342, -1, 39.6577, -1, -1, 39.6577, 30.7342, -1, -29.9083, 1, 1, -29.9083, -1, 1, -29.9083, 1, -16.1304, -29.9083, 1, -16.1304, -29.9083, -1, 1, -29.9083, -1, -16.1304, -29.9083, 1, -16.1304, -29.9083, -1, -16.1304, -0.0005, 1, -16.1304, -0.0005, 1, -16.1304, -29.9083, -1, -16.1304, -0.0005, -1, -16.1304, -0.0005, 1, -16.1304, -0.0005, -1, -16.1304, -0.0005, 1, 1, -0.0005, 1, 1, -0.0005, -1, -16.1304, -0.0005, -1, 1, -0.0005, 1, 1, -0.0005, -1, 1, -29.9083, 1, 1, -29.9083, 1, 1, -0.0005, -1, 1, -29.9083, -1, 1, -0.0005, -1, -16.1304, -29.9083, -1, -16.1304, -0.0005, -1, 1, -0.0005, -1, 1, -29.9083, -1, -16.1304, -29.9083, -1, 1, -29.9083, 1, -16.1304, -0.0005, 1, -16.1304, -29.9083, 1, 1, -29.9083, 1, 1, -0.0005, 1, -16.1304, -0.0005, 1, 1, 29.9083, -1, -16.1304, 29.9083, -1, 1, 29.9083, 1, -16.1304, 29.9083, 1, -16.1304, 29.9083, -1, 1, 29.9083, 1, 1, -0.0005, -1, -16.1304, 29.9083, -1, -16.1304, -0.0005, 1, -16.1304, -0.0005, 1, -16.1304, 29.9083, -1, -16.1304, 29.9083, 1, -16.1304, 29.9083, -1, 1, -0.0005, -1, 1, 29.9083, 1, 1, 29.9083, 1, 1, -0.0005, -1, 1, -0.0005, 1, 1, 29.9083, -1, 1, 29.9083, -1, -16.1304, -0.0005, -1, 1, -0.0005, -1, 1, 29.9083, -1, -16.1304, -0.0005, -1, -16.1304, -0.0005, 1, 1, -0.0005, 1, -16.1304, 29.9083, 1, 1, 29.9083, 1, 1, -0.0005, 1, -16.1304, 29.9083, 1, -16.1304)

[sub_resource type="PrismMesh" id="PrismMesh_1l46r"]
size = Vector3(1, 1, 10)

[node name="Shop" type="RigidBody3D"]
freeze = true
script = ExtResource("1_xfvoa")

[node name="Base" type="MeshInstance3D" parent="."]
transform = Transform3D(0.533118, 0, 0, 0, 0.533118, 0, 0, 0, 0.533118, 0, 0, 0)
mesh = ExtResource("1_lx5au")

[node name="StaticBody3D" type="StaticBody3D" parent="Base"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_xfvoa")

[node name="Stand1" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.46077e-08, 0, -0.791733, 0, 0.791733, 0, 0.791733, 0, -3.46077e-08, -10.377, 0.929, -1.25)
mesh = SubResource("PrismMesh_1l46r")

[node name="Label" type="Label3D" parent="Stand1"]
transform = Transform3D(-4.37114e-08, -0.588773, 0.808298, 2.24363e-15, 0.808298, 0.588773, -1, 2.57361e-08, -3.53318e-08, 0.228176, 0.403624, 0.112761)
text = "TextPlaceholder"
font_size = 100

[node name="Stand2" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.46077e-08, 0, -0.791733, 0, 0.791733, 0, 0.791733, 0, -3.46077e-08, 0, 0.929, -1.25)
mesh = SubResource("PrismMesh_1l46r")

[node name="Label" type="Label3D" parent="Stand2"]
transform = Transform3D(-4.37114e-08, -0.589196, 0.80799, 0, 0.80799, 0.589196, -1, 2.57546e-08, -3.53184e-08, 0.228176, 0.403625, 0.112761)
text = "TextPlaceholder"
font_size = 100

[node name="Stand3" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.46077e-08, 0, -0.791733, 0, 0.791733, 0, 0.791733, 0, -3.46077e-08, 10.377, 0.929, -1.25)
mesh = SubResource("PrismMesh_1l46r")

[node name="Label" type="Label3D" parent="Stand3"]
transform = Transform3D(-4.37114e-08, -0.589196, 0.80799, 0, 0.80799, 0.589196, -1, 2.57546e-08, -3.53184e-08, 0.228176, 0.403625, 0.112761)
text = "TextPlaceholder"
font_size = 100
